final API doc
